--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-logging.level.org.springframework.web=DEBUG
+spring.datasource.url=jdbc:postgresql://localhost:5432/demodb
+spring.datasource.username=postgres
+spring.datasource.password=password
