--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,40 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.5.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.springtest</groupId>
-	<artifactId>projectspringone</artifactId>
+	<groupId>net.javaguides</groupId>
+	<artifactId>springboot-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>projectspringone</name>
-	<description>Mein erstes BootSpringProject</description>
+	<name>springboot-backend</name>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -35,24 +50,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency> 
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-validation</artifactId> 
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-jdbc</artifactId> 			
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId> 
-			<artifactId>postgresql</artifactId> 	
-			<scope>runtime</scope>		
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId> 
-			<artifactId>flyway-core</artifactId> 			
-		</dependency>
-
 	</dependencies>
 
 	<build>
