--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<skipTests>true</skipTests>
+					</configuration>
+		</plugin>
 		</plugins>
+		<finalName>springboot-backend</finalName>
 	</build>
 
 </project>
