--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.datasource.url=jdbc:mysql://database:3306/employee_management_system?useSSL=false
-spring.datasource.username=user
-spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.show-sql = true
-
-spring.jpa.hibernate.ddl-auto = update
+spring.profiles.active=@activatedProperties@
