--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,4 +9,5 @@ spring.jpa.show-sql = true
 logging.level.web = DEBUG
 
 spring.jpa.hibernate.ddl-auto = update
+#set profile
 spring.profiles.active=dev
