--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<skipTests>false</skipTests>
+						<skipTests>${tests.skip}</skipTests>
 					</configuration>
 		</plugin>
 		</plugins>
