--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - backendNetwork
       - frontendNetwork
   my_react_ui:
-    image: my_react_ui:dev
+    image: just13131410/boot-spring-ui
     environment:
      - CHOKIDAR_USEPOLLING=true my_react_ui:dev
     ports: 
