--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,22 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- GCLOUD -->
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter</artifactId>
+			<version>1.0.0.RELEASE</version>
+		  </dependency>
+		  <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
+			<version>1.0.0.RELEASE</version>
+		  </dependency>
 
 		<!-- SELENIUM-->
 		<dependency>
@@ -106,6 +122,13 @@
             <id>test</id>
             <properties>
                 <activatedProperties>test</activatedProperties>
+            </properties>
+		</profile>
+		
+		<profile>
+            <id>prod</id>
+            <properties>
+                <activatedProperties>prod</activatedProperties>
             </properties>
         </profile>
     </profiles>
